# kostal-penticore-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_alpine  LICENSE  README.md  deny.toml
.github/workflows/: docker-publish.yml  verify-and-deploy.yml
config/: default.json  default.toml
src/: app.rs  cfg.rs  client.rs  main.rs  plenticore.rs
