[package]
name = "kostal-plenticore-rs"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3          # Optimize for speed.
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic
debug = false
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influx_db_client = "0.5.1"
config = "0.13.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.0.0", features = ["full"] }
rocket = "0.5.0-rc.2"
base64 = "0.21.0"
rand = "0.8.5"
ring = "0.16.20"
aes-gcm = "0.10.1"
const_format = "0.2.26"
log = "0.4.17"
env_logger = "0.10.0"
